--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -78,5 +78,5 @@ select {
 }
 
 body {
-  background: linear-gradient(to bottom, #FBC2EB, #A6C1EE);
+  background: linear-gradient(107.58deg, #fbc2eb -2.85%, #a6c1ee 103.54%);
 }
